--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ h2{
     border-radius: 8px;
     cursor: pointer;
     font-weight: bold;
+    color:black;
 }
 
 .tab-btn.active {
@@ -69,6 +70,7 @@ h2{
     position: relative;
     z-index: 1;
     margin-top: 10px;
+    color:black;
 }
 
 /* 🔥 Adicionando a seta para indicar onde a roleta para 🔥 */
@@ -99,6 +101,7 @@ h2{
     left: -30px;
     background: #ffd700;
     border: 0;
+    color:black;
 }
 
 #new-item{
