--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@ h2{
     border-radius: 8px;
     cursor: pointer;
     font-weight: bold;
-    color:black;
 }
 
 .tab-btn.active {
@@ -70,7 +69,6 @@ h2{
     position: relative;
     z-index: 1;
     margin-top: 10px;
-    color:black;
 }
 
 /* 🔥 Adicionando a seta para indicar onde a roleta para 🔥 */
@@ -101,7 +99,12 @@ h2{
     left: -30px;
     background: #ffd700;
     border: 0;
-    color:black;
+    cursor: pointer;
+}
+
+#add-btn:hover{
+    text-decoration: underline;
+    background: #e2c72d;
 }
 
 #new-item{
@@ -175,7 +178,7 @@ h2{
         font-size: 12px;
     }
 
-     #new-item{
+    #new-item{
         padding: 9px 30px 9px 10px;
         left: 30px;
     }
